# socks5

./: LICENSE  socks5.cabal
src/: socks5.hs
src/Socks5/: Internal.hs
