Name:          socks5
Version:       0.0.0
License:       MIT
License-file:  LICENSE
Cabal-version: >=1.10
Copyright:     Copyright (c) Kai Wang
Author:        Kai Wang
Maintainer:    Kai Wang
Stability:     Experimental
Category:      Network
Build-type:    Simple
Synopsis:      SOCKS5 proxy.
Description:   a simple SOCKS5 proxy for educational purpose.

extra-source-files:
  README.md

Source-Repository head
  Type: git
  Location: git://github.com/accelas/socks5.git

Executable socks5
  Hs-source-dirs:      src
  Main-is:             socks5.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  Build-depends:
    base ==4.5.*,
    async,
    attoparsec,
    bytestring (== 0.9.*),
    network,
    transformers (>= 0.2 && < 0.4),
    pipes >= 3.2 && < 3.4,
    pipes-safe >= 1.1 && < 1.3,
    pipes-parse == 1.0.*,
    pipes-network >= 0.5.1 && < 0.6,
    pipes-attoparsec >= 0.2.0 && < 0.3

